<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sideBarMenu.devInfo.OpenSourceLicense">

    <!-- activity (header) RelativeLayout -->
    <RelativeLayout
        android:id="@+id/activity_header_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- 뒤로가기 버튼 -->
        <ImageButton
            android:id="@+id/back_iBtn"
            android:layout_width="42.5dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/back"
            tools:ignore="SpeakableTextPresentCheck" />
    </RelativeLayout>

    <!-- activity (body) RelativeLayout -->
    <RelativeLayout
        android:id="@+id/activity_body_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_header_relativeLayout"
        android:layout_marginTop="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/opensource_license_label_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/opensource_license_label"
                    android:textColor="@color/dark_grey"
                    android:textSize="22.5sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/standard_relativeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/opensource_license_label_tv"
                    android:layout_alignLeft="@+id/opensource_license_label_tv"
                    android:layout_marginTop="17.5dp"
                    android:background="@drawable/small_info_background"
                    android:paddingStart="9.5dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="9.5dp"
                    android:paddingBottom="3dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/standard"
                        android:textColor="@color/normal_grey"
                        android:textStyle="bold">

                    </TextView>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/standard_relativeLayout"
                    android:layout_alignLeft="@+id/opensource_license_label_tv"
                    android:layout_marginTop="50dp">

                    <TextView
                        android:id="@+id/mit_license_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mit_license_label"
                        android:textColor="@color/text_blue"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/mit_license_tv_url_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/mit_license_tv"
                        android:layout_marginTop="5dp"
                        android:paddingEnd="5dp"
                        android:lineSpacingExtra="5dp"
                        android:text="@string/mit_license_url"
                        android:textColor="@color/blue"
                        android:textSize="15sp" />
                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>